# programmiersprachen-raytracer

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  doctest.yml
framework/: Box.cpp  Box.h  CMakeLists.txt  HitPoint.h  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  window.hpp
source/: CMakeLists.txt  tests.cpp
